test/errors/str3.ida

#OUTPUT
#Syntax Error: You can only assign a string to a string.
# -> [15] s2 : str = i;
#
#END

#RET 0

extern func puts(s:str)

func main -> int
    i : int = 20;
    s1 : str = "Hello!";
    s2 : str = i;
begin
    puts(s1);
    puts(s2);
    
    return 0;
end
